feat: Added project files.

--- a/server/index.html
+++ b/server/index.html
@@ -15,7 +15,7 @@
     <meta name="application-name" content="&nbsp;" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="images/mstile-144x144.png" />
-    <title>DICTANTOR | Server</title>
+    <title>DICT.OK | Server</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <style>
@@ -26,7 +26,7 @@
 <body>
 
     <div class="splash">
-        <h1><span>DICTANTOR </span> Server Started</h1>
+        <h1><span>DICT.OK </span> Server Started</h1>
     </div>
 
 </body>
